2010-09-08  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c(TreeviewSeeCommand):
	Schedule redisplay if [$tv see] opens any items [Bug#2829363].

2010-09-05  Donal K. Fellows  <dkf@users.sf.net>

	* library/bgerror.tcl: [Bugs 3046742,3046750]: Improve keybindings for
	the background error dialog, and allow the use of the window manager
	controls for closing it (where supported). The Escape key now causes
	all remaining background error messages in the queue to be dropped.

2010-10-02  Joe English  <jenglish@users.sourceforge.net>

        * library/ttk/winTheme.tcl, library/ttk/xpTheme.tcl,
	* library/ttk/vistaTheme.tcl: [Bug 3057573]: Specify disabled combobox
	text foreground color.

2010-08-31  Andreas Kupries  <andreask@activestate.com>

	* win/tcl.m4: Applied patch by Jeff fixing issues with the manifest
	handling on Win64.
	* win/configure: Regenerated.

2010-08-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in: Add valgrind target
	* unix/configure, unix/tcl.m4: [Bug 1230554]: SHLIB_LD_LIBS='${LIBS}'
	for OSF1-V*. Add /usr/lib64 to set of auto-search dirs.
	(SC_PATH_X): Correct syntax error when xincludes not found.

	* win/Makefile.in (VC_MANIFEST_EMBED_DLL VC_MANIFEST_EMBED_EXE):
	* win/configure, win/configure.in, win/tcl.m4: SC_EMBED_MANIFEST macro
	and --enable-embedded-manifest configure arg added to support manifest
	embedding where we know the magic. Help prevents DLL hell with MSVC8+.

	* generic/tkText.c (DumpLine): [Bug 3053347]: Replace segPtr->size
	with currentSize throughout, but particularly in if lineChanged block
	where segPtr may no longer be valid.

2010-08-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk*Decls.h:   (regenerated with modified genStubs.tcl)
	* generic/tk*StubInit.c

2010-08-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkGenStubs.tcl: [Patch 3034251]: partly: remove some
	more unneeded ifdeffery, as in tcl/tools/genStubs.tcl.