@@ -5,7 +5,7 @@
 #
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
-# 
+#
 # Copyright (c) 1995-1996 Sun Microsystems, Inc.
 # Copyright (c) 1998-2000 Ajuba Solutions.
 # Copyright (c) 2001-2005 ActiveState Corporation.
@@ -13,7 +13,7 @@
 # Copyright (c) 2003-2008 Pat Thoyts.
 #
 #------------------------------------------------------------------------------
-# RCS: @(#) $Id: makefile.vc,v 1.130 2010/03/12 15:23:39 nijtmans Exp $
+# RCS: @(#) $Id: makefile.vc,v 1.131 2010/09/09 14:59:24 nijtmans Exp $
 #------------------------------------------------------------------------------
 
 # Check to see we are configured to build with MSVC (MSDEVDIR or MSVCDIR)
@@ -117,7 +117,7 @@ the build instructions.
 #		Sets special macros for checking compatability.
 #
 #		nodep	 = Turns off compatability macros to ensure Tk isn't
-#			    being built with deprecated functions. 
+#			    being built with deprecated functions.
 #		fullwarn = Builds with full compiler and link warnings enabled.
 #			    Very verbose.
 #
@@ -130,7 +130,7 @@ the build instructions.
 #	TMP_DIR=<path>
 #	OUT_DIR=<path>
 #		Hooks to allow the intermediate and output directories to be
-#		changed.  $(OUT_DIR) is assumed to be 
+#		changed.  $(OUT_DIR) is assumed to be
 #		$(BINROOT)\(Release|Debug) based on if symbols are requested.
 #		$(TMP_DIR) will de $(OUT_DIR)\<buildtype> by default.
 #
@@ -521,7 +521,7 @@ tcllibs    = $(TCLIMPLIB)
 tcllibs    = $(TCLSTUBLIB) $(tcllibs)
 !endif
 
-baselibs   = kernel32.lib user32.lib ws2_32.lib
+baselibs   = kernel32.lib user32.lib advapi32.lib ws2_32.lib
 # Avoid 'unresolved external symbol __security_cookie' errors.
 # c.f. http://support.microsoft.com/?id=894573
 !if "$(MACHINE)" == "IA64" || "$(MACHINE)" == "AMD64"
